src/components/WorkSpace/WorkSpace.scss
.userAlertCard {
  position: absolute;
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 305px;
  height: 210px;
  background: linear-gradient(to right, #4775FF, #4775FF 33px, #FFF 30px, #FFF 66.66%, #FFF 66.66%);
  background-color: #FFFFFF;
  border-radius: 10px;
  left: 50%;
  margin-left: -140px;
  top: 10%;
  z-index: 20;
  font-family: 'Roboto', sans-serif;
  font-style: normal;
  line-height: 150%;

  a, a:link, a:visited {
    color: #FFFFFF;
  }
}

.cardContent{
  margin-left: 20%;
  margin-top: -25%;
}

.name {
  font-family: 'SF Pro Display', sans-serif;
  font-weight: 500;
  font-size: 13px;
}

.address {
  font-weight: 300;
  font-size: 11px;
}

.hours{
  font-weight: 300;
  font-size: 11px;
}

.now {
  display: flex;
  flex-direction: row;
  padding: 1px 8px;
  position: absolute;
  width: 71px;
  height: 23px;
  border-radius: 31px;
  font-weight: 300;
  font-size: 12px;
}

.open {
  background: #A4FF2E;
}

.close {
  background: #C4C4C4;
  color: black;
  width: 80px;
  padding-top: 5px;
  text-shadow: none;
}

.message {
  font-weight: 300;
  font-size: 12px;
  line-height: 200%;
  text-align: center;
  margin-top: 20px;
}

.review {
  display: flex;
  flex-direction: row;
  padding: 5px 32px 8px;

  position: absolute;
  width: 193px;
  height: 36px;

  background: #4775FF;
  border-radius: 24px;

  font-weight: bold;
  font-size: 13px;
  color: #FFFFFF;

  left: 20%;
  bottom: 10%;
}

.workspace {
  background-color: #4775FF;
  border-radius: 10px 10px 10px 10px;
  box-shadow: 0px -8px 16px rgba(0, 0, 0, 0.15);
  color: #FFFFFF;
  width: 413px;
  height: 92vh;
  left: 15px;
  top: 60px;
  overflow-y: auto;
  overflow-x: hidden;
  padding: 1rem;
  position: absolute;
  z-index: 12;

  font-family: SF Pro Display, sans-serif;
  font-size: 15px;
  font-weight: 300;
  -ms-overflow-style: none;
  overflow: -moz-scrollbars-none;

  &::-webkit-scrollbar {
    display: none;
  }
}

.workspaceImage {
  width: 355px;
  height: 190px;
  margin-top: 8%;
  margin-bottom: 8%;
  border-radius: 10px;
}

.worspaceLink {
  display: inline-block;
  width: 298px;

  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.workspaceInfo {
  margin-top: 15px;
}

.buttonGroup {
  display: flex;
  justify-content: space-evenly;
  margin-bottom: 10px;
}

.button {
  width: 80px;
  height: 80px;
  background: #FFFFFF;
  border-radius: 20px;
  color: #222222;
  font-size: 11px;
  font-weight: 300;
  line-height: 120%;
  text-align: center;
}

.button img {
  margin-top: 5px;
  margin-bottom: 5px;
}

.nameAndStar {
  display: -webkit-inline-box;
}

.starRating {
  margin-left: 10px;
}

.vecStyle {
  float: right;
  margin: 6px;
}

.ratingsRow {
  color: #FFFFFF;
  font-family: 'Roboto', sans-serif;
  font-size: 15px;
  font-weight: 300;
  display: flex;
  justify-content: space-between;
  margin: 10px 0px;
  @media only screen and (max-width:320px) {
    margin: 5px 0px;
  }
  @media only screen and (min-width: 426px) and (max-width: 768px) {
    margin: 5px 0px;
  }
}

.yellowBubble {
  height: 10px;
  margin: 0 6px;
  padding: 0;
  width: 40px;
  @media only screen and (max-width:320px) {
    height: 8px;
    margin: 0 2px;
    width: 24px;
  }
  @media only screen and (min-width: 426px) and (max-width: 768px) {
    height: 8px;
    margin: 0 2px;
    width: 24px;
  }
}

.grayBubble {
  height: 10px;
  margin: 0 6px;
  padding: 0;
  width: 40px;
  @media (max-width:320px) {
    height: 8px;
    margin: 0 2px;
    width: 24px;
  }
  @media (min-width: 426px) and (max-width: 768px) {
    height: 8px;
    margin: 0 2px;
    width: 24px;
  }
}

.features p {
  margin-bottom: 5px;

  @media only screen and (max-width: 320px) {
    font-size: 12px;
  }

  @media only screen and (min-width: 426px) and (max-width: 768px) {
    font-size: 12px;
  }
}

img {
  // max-width: 305px;
  display: block;
  margin: 0 auto;
}

h5 {
  margin: 0px;
}

@media only screen and (min-width: 2560px) {
  .workspace {
    top: 79px;
    margin: 10px;
    width: 505px;
    height: 55vh;
  }

  .worspaceLink {
    display: inline-block;
    width: 380px;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
  }
}

@media only screen and (min-width: 1440px) and (max-width: 2559px) {
  .workspace {
    top: 65px;
  }
}

@media only screen and (max-width: 768px) {
  .workspace {
      height: 90vh;
      width: 301px;
  }

  .workspaceImage {
      width: 272px;
      height: 162px;
      margin-top: 8%;
      margin-bottom: 8%;
      border-radius: 10px;
  }
}

@media only screen and (min-width: 426px) and (max-width: 768px) {
  .worspaceLink {
    display: inline-block;
    width: 195px;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
  }
}

@media only screen and (max-width: 425px) {
  .workspace {
    width: 100vw;
    left: 0;
    height: 90vh;
  }

  .workspaceImage {
    width: 355px;
    height: 185px;
  }
}

@media only screen and (max-width: 375px) {
  .workspace {
    width: 100vw;
    left: 0;
    top: 68px;
    height: 88vh;
  }

  .workspaceImage {
    width: 318px;
    height: 175px;
  }

  .worspaceLink {
    display: inline-block;
    width: 262px;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
  }
}

@media only screen and (max-width: 320px) {
  .workspaceImage {
    max-width: 260px;
    height: 160px;
    margin-top: 8%;
    margin-bottom: 5%;
    margin-left: 5%;
  }

  .worspaceLink {
    display: inline-block;
    width: 210px;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
  }

  .userAlertCard {
    left:47%;
  }

}

